--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
                         <span class="tag">JavaScript</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="project-link">Demo</a>
-                        <a href="#" class="project-link">GitHub</a>
+                        <a href="https://portofolio-pribadi-nine.vercel.app/" class="project-link">Demo</a>
+                        <a href="https://github.com/mraihan777/Portofolio-Pribadi" class="project-link">GitHub</a>
                     </div>
                 </div>
             </div>
@@ -177,10 +177,10 @@
             </form>
 
             <div class="social-links">
-                <a href="#" class="social-link" title="GitHub">📱</a>
-                <a href="#" class="social-link" title="LinkedIn">💼</a>
-                <a href="#" class="social-link" title="Twitter">🐦</a>
-                <a href="#" class="social-link" title="Instagram">📷</a>
+                <a href="https://github.com/mraihan777" class="social-link" title="GitHub">📱</a>
+                <a href="https://www.linkedin.com/in/muhammad-raihan-854969301/" class="social-link"
+                    title="LinkedIn">💼</a>
+                <a href="https://instagram.com/ra1hannnnnnnnn" class="social-link" title="Instagram">📷</a>
             </div>
         </div>
     </section>
