--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="portofolio, web developer, programmer, desain web">
     <title>Portofolio Pribadi | Web Developer</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/quick-links.css">
 </head>
 
 <body>
@@ -37,6 +38,30 @@
             <div class="hero-buttons">
                 <a href="projects.html" class="btn btn-primary">Lihat Proyek</a>
                 <a href="contact.html" class="btn btn-outline">Hubungi Saya</a>
+            </div>
+
+            <!-- Quick Links -->
+            <div class="quick-links">
+                <a href="about.html" class="quick-link-card">
+                    <div class="quick-link-icon">👤</div>
+                    <h3>Tentang Saya</h3>
+                    <p>Kenali lebih dekat</p>
+                </a>
+                <a href="skills.html" class="quick-link-card">
+                    <div class="quick-link-icon">💼</div>
+                    <h3>Keahlian</h3>
+                    <p>Apa yang saya kuasai</p>
+                </a>
+                <a href="projects.html" class="quick-link-card">
+                    <div class="quick-link-icon">🚀</div>
+                    <h3>Proyek</h3>
+                    <p>Hasil karya saya</p>
+                </a>
+                <a href="contact.html" class="quick-link-card">
+                    <div class="quick-link-icon">📧</div>
+                    <h3>Kontak</h3>
+                    <p>Mari berdiskusi</p>
+                </a>
             </div>
         </div>
     </section>
