--- a/admin.html
+++ b/admin.html
@@ -6,242 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel - CMS Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
-    <style>
-        .admin-container {
-            max-width: 1200px;
-            margin: 100px auto;
-            padding: 2rem;
-        }
-
-        .admin-header {
-            background: var(--primary-gradient);
-            padding: 2rem;
-            border-radius: var(--radius-lg);
-            margin-bottom: 2rem;
-            color: white;
-            text-align: center;
-        }
-
-        .admin-nav {
-            display: flex;
-            gap: 1rem;
-            margin-bottom: 2rem;
-            flex-wrap: wrap;
-        }
-
-        .admin-nav button {
-            flex: 1;
-            min-width: 150px;
-            padding: 1rem;
-            background: var(--bg-card);
-            border: 2px solid var(--primary-color);
-            border-radius: var(--radius-md);
-            cursor: pointer;
-            font-weight: 600;
-            transition: all var(--transition-normal);
-        }
-
-        body.dark-mode .admin-nav button {
-            background: var(--dark-bg-card);
-        }
-
-        .admin-nav button.active {
-            background: var(--primary-gradient);
-            color: white;
-        }
-
-        .admin-section {
-            display: none;
-            background: var(--bg-card);
-            padding: 2rem;
-            border-radius: var(--radius-lg);
-            box-shadow: var(--shadow-lg);
-        }
-
-        body.dark-mode .admin-section {
-            background: var(--dark-bg-card);
-        }
-
-        .admin-section.active {
-            display: block;
-        }
-
-        .form-section {
-            margin-bottom: 2rem;
-        }
-
-        .form-section h3 {
-            margin-bottom: 1rem;
-            color: var(--primary-color);
-        }
-
-        .input-group {
-            margin-bottom: 1.5rem;
-        }
-
-        .input-group label {
-            display: block;
-            margin-bottom: 0.5rem;
-            font-weight: 600;
-            color: var(--text-primary);
-        }
-
-        body.dark-mode .input-group label {
-            color: var(--dark-text-primary);
-        }
-
-        .input-group input,
-        .input-group textarea {
-            width: 100%;
-            padding: 0.8rem;
-            border: 2px solid var(--bg-secondary);
-            border-radius: var(--radius-md);
-            font-family: 'Poppins', sans-serif;
-            background: var(--bg-primary);
-            color: var(--text-primary);
-        }
-
-        body.dark-mode .input-group input,
-        body.dark-mode .input-group textarea {
-            background: var(--dark-bg-secondary);
-            border-color: var(--dark-bg-secondary);
-            color: var(--dark-text-primary);
-        }
-
-        .input-group input:focus,
-        .input-group textarea:focus {
-            outline: none;
-            border-color: var(--primary-color);
-        }
-
-        .btn-save {
-            background: var(--primary-gradient);
-            color: white;
-            padding: 1rem 2rem;
-            border: none;
-            border-radius: var(--radius-md);
-            cursor: pointer;
-            font-weight: 600;
-            font-size: 1rem;
-            transition: all var(--transition-normal);
-        }
-
-        .btn-save:hover {
-            transform: translateY(-2px);
-            box-shadow: var(--shadow-lg);
-        }
-
-        .project-list,
-        .skill-list {
-            margin-top: 2rem;
-        }
-
-        .project-item,
-        .skill-item {
-            background: var(--bg-secondary);
-            padding: 1.5rem;
-            border-radius: var(--radius-md);
-            margin-bottom: 1rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        body.dark-mode .project-item,
-        body.dark-mode .skill-item {
-            background: var(--dark-bg-secondary);
-        }
-
-        .item-actions {
-            display: flex;
-            gap: 0.5rem;
-        }
-
-        .btn-edit,
-        .btn-delete {
-            padding: 0.5rem 1rem;
-            border: none;
-            border-radius: var(--radius-sm);
-            cursor: pointer;
-            font-weight: 500;
-            transition: all var(--transition-fast);
-        }
-
-        .btn-edit {
-            background: #4facfe;
-            color: white;
-        }
-
-        .btn-delete {
-            background: #f5576c;
-            color: white;
-        }
-
-        .btn-edit:hover,
-        .btn-delete:hover {
-            transform: translateY(-2px);
-        }
-
-        .success-message {
-            background: #10b981;
-            color: white;
-            padding: 1rem;
-            border-radius: var(--radius-md);
-            margin-bottom: 1rem;
-            display: none;
-        }
-
-        .success-message.show {
-            display: block;
-            animation: slideDown 0.3s ease;
-        }
-
-        .logout-btn {
-            background: transparent;
-            border: 2px solid white;
-            color: white;
-            padding: 0.5rem 1.5rem;
-            border-radius: var(--radius-md);
-            cursor: pointer;
-            font-weight: 600;
-            transition: all var(--transition-fast);
-        }
-
-        .logout-btn:hover {
-            background: white;
-            color: var(--primary-color);
-        }
-
-        .login-container {
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 2rem;
-        }
-
-        .login-box {
-            background: var(--bg-card);
-            padding: 3rem;
-            border-radius: var(--radius-lg);
-            box-shadow: var(--shadow-xl);
-            max-width: 400px;
-            width: 100%;
-        }
-
-        body.dark-mode .login-box {
-            background: var(--dark-bg-card);
-        }
-
-        .login-box h2 {
-            text-align: center;
-            margin-bottom: 2rem;
-            background: var(--primary-gradient);
-            -webkit-background-clip: text;
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-    </style>
+    <link rel="stylesheet" href="css/admin.css">
 </head>
 
 <body>
@@ -254,9 +19,6 @@
                 <input type="password" id="adminPassword" placeholder="Masukkan password admin">
             </div>
             <button class="btn-save" onclick="login()" style="width: 100%;">Login</button>
-            <p style="text-align: center; margin-top: 1rem; font-size: 0.9rem; color: var(--text-light);">
-                Default password: <strong>admin123</strong>
-            </p>
         </div>
     </div>
 
