--- a/skills.html
+++ b/skills.html
@@ -18,7 +18,7 @@
                 <li><a href="index.html">Beranda</a></li>
                 <li><a href="about.html">Tentang</a></li>
                 <li><a href="skills.html" class="active">Keahlian</a></li>
-                <li><a href="projects.html">Proyek</a></li>
+                <li><a href="projects.html">Projek</a></li>
                 <li><a href="contact.html">Kontak</a></li>
                 <li><button class="theme-toggle" id="themeToggle">🌙</button></li>
             </ul>
