--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Proyek Portfolio Muhammad Raihan">
-    <title>Proyek | Portfolio</title>
+    <title>Projek | Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -18,7 +18,7 @@
                 <li><a href="index.html">Beranda</a></li>
                 <li><a href="about.html">Tentang</a></li>
                 <li><a href="skills.html">Keahlian</a></li>
-                <li><a href="projects.html" class="active">Proyek</a></li>
+                <li><a href="projects.html" class="active">Projek</a></li>
                 <li><a href="contact.html">Kontak</a></li>
                 <li><button class="theme-toggle" id="themeToggle">🌙</button></li>
             </ul>
@@ -28,7 +28,7 @@
 
     <!-- Projects Section -->
     <section id="projects" class="fade-in" style="min-height: 100vh; padding-top: 120px;">
-        <h2 class="section-title">Proyek Saya</h2>
+        <h2 class="section-title">Projek Saya</h2>
         <div class="projects-grid">
             <div class="project-card">
                 <img class="project-image" id="project1Image" src="images/project1.jpg" alt="Project 1">
@@ -61,7 +61,7 @@
                         <span class="tag">JavaScript</span>
                     </div>
                     <div class="project-links">
-                        <a href="https://bank-sampah.vercel.app/" class="project-link" target="_blank">Demo</a>
+                        <a href="https://bank-sampah-kappa.vercel.app/" class="project-link" target="_blank">Demo</a>
                         <a href="https://github.com/mraihan777/Bank-Sampah.git" class="project-link"
                             target="_blank">GitHub</a>
                     </div>
