--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="index.html" class="active">Beranda</a></li>
                 <li><a href="about.html">Tentang</a></li>
                 <li><a href="skills.html">Keahlian</a></li>
-                <li><a href="projects.html">Proyek</a></li>
+                <li><a href="projects.html">Projek</a></li>
                 <li><a href="contact.html">Kontak</a></li>
                 <li><button class="theme-toggle" id="themeToggle">🌙</button></li>
             </ul>
@@ -35,7 +35,7 @@
             <p>Saya menciptakan pengalaman web yang indah dan fungsional dengan fokus pada detail dan kualitas. Mari
                 wujudkan proyek digital Anda menjadi kenyataan.</p>
             <div class="hero-buttons">
-                <a href="projects.html" class="btn btn-primary">Lihat Proyek</a>
+                <a href="projects.html" class="btn btn-primary">Lihat Projek</a>
                 <a href="contact.html" class="btn btn-outline">Hubungi Saya</a>
             </div>
         </div>
