--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hubungi Muhammad Raihan">
-    <title>Kontak | Portfolio</title>
+    <title>Contact | Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -15,11 +15,11 @@
         <div class="nav-container">
             <div class="logo" onclick="window.location.href='index.html'">Portfolio</div>
             <ul class="nav-links" id="navLinks">
-                <li><a href="index.html">Beranda</a></li>
-                <li><a href="about.html">Tentang</a></li>
-                <li><a href="skills.html">Keahlian</a></li>
-                <li><a href="projects.html">Projek</a></li>
-                <li><a href="contact.html" class="active">Kontak</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="skills.html">Skills</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
                 <li><button class="theme-toggle" id="themeToggle">🌙</button></li>
             </ul>
             <button class="mobile-toggle" id="mobileToggle">☰</button>
@@ -28,7 +28,7 @@
 
     <!-- Contact Section -->
     <section id="contact" class="fade-in" style="min-height: 100vh; padding-top: 120px;">
-        <h2 class="section-title">Hubungi Saya</h2>
+        <h2 class="section-title">Contact Me</h2>
         <div class="contact-container">
             <form class="contact-form" id="contactForm">
                 <div class="form-group">
@@ -43,7 +43,7 @@
                     <label for="message">Pesan</label>
                     <textarea id="message" name="message" required placeholder="Tulis pesan Anda di sini..."></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary" style="width: 100%;">Kirim Pesan</button>
+                <button type="submit" class="btn btn-primary" style="width: 100%;">Send Message</button>
             </form>
 
             <div class="social-links">
