--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div class="nav-container">
             <div class="logo" onclick="window.location.href='index.html'">Portfolio</div>
             <ul class="nav-links" id="navLinks">
-                <li><a href="index.html" class="active">Beranda</a></li>
-                <li><a href="about.html">Tentang</a></li>
-                <li><a href="skills.html">Keahlian</a></li>
-                <li><a href="projects.html">Projek</a></li>
-                <li><a href="contact.html">Kontak</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="skills.html">Skills</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><button class="theme-toggle" id="themeToggle">🌙</button></li>
             </ul>
             <button class="mobile-toggle" id="mobileToggle">☰</button>
@@ -35,8 +35,8 @@
             <p>Saya menciptakan pengalaman web yang indah dan fungsional dengan fokus pada detail dan kualitas. Mari
                 wujudkan proyek digital Anda menjadi kenyataan.</p>
             <div class="hero-buttons">
-                <a href="projects.html" class="btn btn-primary">Lihat Projek</a>
-                <a href="contact.html" class="btn btn-outline">Hubungi Saya</a>
+                <a href="projects.html" class="btn btn-primary">View Projects</a>
+                <a href="contact.html" class="btn btn-outline">Contact Me</a>
             </div>
         </div>
     </section>
