--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Proyek Portfolio Muhammad Raihan">
-    <title>Projek | Portfolio</title>
+    <title>Project | Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -15,11 +15,11 @@
         <div class="nav-container">
             <div class="logo" onclick="window.location.href='index.html'">Portfolio</div>
             <ul class="nav-links" id="navLinks">
-                <li><a href="index.html">Beranda</a></li>
-                <li><a href="about.html">Tentang</a></li>
-                <li><a href="skills.html">Keahlian</a></li>
-                <li><a href="projects.html" class="active">Projek</a></li>
-                <li><a href="contact.html">Kontak</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="skills.html">Skills</a></li>
+                <li><a href="projects.html" class="active">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><button class="theme-toggle" id="themeToggle">🌙</button></li>
             </ul>
             <button class="mobile-toggle" id="mobileToggle">☰</button>
@@ -28,7 +28,7 @@
 
     <!-- Projects Section -->
     <section id="projects" class="fade-in" style="min-height: 100vh; padding-top: 120px;">
-        <h2 class="section-title">Projek Saya</h2>
+        <h2 class="section-title">Projects</h2>
         <div class="projects-grid">
             <div class="project-card">
                 <img class="project-image" id="project1Image" src="images/project1.jpg" alt="Project 1">
