Update project demo link in projects.html

--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
                         <span class="tag">JavaScript</span>
                     </div>
                     <div class="project-links">
-                        <a href="https://bank-sampah-kappa.vercel.app/" class="project-link" target="_blank">Demo</a>
+                        <a href="https://bank-sampah-kelompok.vercel.app/" class="project-link" target="_blank">Demo</a>
                         <a href="https://github.com/mraihan777/Bank-Sampah.git" class="project-link"
                             target="_blank">GitHub</a>
                     </div>
